--- a/src/pages/modal-interacao/modal-interacao.html
+++ b/src/pages/modal-interacao/modal-interacao.html
@@ -7,248 +7,254 @@
 </ion-header>
 
 <ion-content padding>
+  <form [formGroup]="interacaoTecnicoForm" (ngSubmit)="logForm()">
 
-  <ion-card>
-    <ion-card-header>
-      Retornará ao local?
-    </ion-card-header>
+    <ion-card>
+      <ion-card-header>
+        Retornará ao local?
+      </ion-card-header>
 
-    <ion-card-content>
-
-      <ion-list radio-group>
-        <ion-item>
-          <ion-label>Sim</ion-label>
-          <ion-radio color="primary" value="sim" (ionSelect)="retornarLocal = true"></ion-radio>
-        </ion-item>
-
-        <ion-item>
-          <ion-label>Não</ion-label>
-          <ion-radio color="primary" value="nao" checked (ionSelect)="retornarLocal = false"></ion-radio>
-        </ion-item>
-      </ion-list>
-
-      <ion-item *ngIf="retornarLocal === true">
-        <ion-label color="primary" stacked>Motivo</ion-label>
-        <ion-input placeholder="Insira o motivo"></ion-input>
-      </ion-item>
-
-    </ion-card-content>
-  </ion-card>
-
-  <ion-card>
-
-    <ion-card-header>
-      Houve treinamento?
-    </ion-card-header>
-
-    <ion-card-content>
-
-      <div>
-        <ion-list radio-group>
+      <ion-card-content formGroupName="retorno">
+        <ion-list radio-group formControlName='retornar' (ngModel)="validacaoCampo.retornarLocal">
           <ion-item>
             <ion-label>Sim</ion-label>
-            <ion-radio color="primary" value="sim" (ionSelect)="houveTreinamento = true"></ion-radio>
+            <ion-radio value="true" (ionSelect)="validacaoCampo.retornarLocal = false"></ion-radio>
           </ion-item>
 
           <ion-item>
             <ion-label>Não</ion-label>
-            <ion-radio color="primary" value="nao" checked (ionSelect)="houveTreinamento = false"></ion-radio>
+            <ion-radio color="primary" value="false" (ionSelect)="validacaoCampo.retornarLocal = true"></ion-radio>
           </ion-item>
         </ion-list>
-      </div>
 
-
-
-      <div *ngIf="houveTreinamento === true">
-
-        <ion-item text-wrap>
-          Selecione os tópicos abordados no treinamento
-        </ion-item>
-        <ion-item>
-          <ion-label>Cadastros</ion-label>
-          <ion-checkbox color="primary" checked="false"></ion-checkbox>
+        <ion-item *ngIf="validacaoCampo.retornarLocal === false">
+          <ion-label color="primary" stacked>Motivo</ion-label>
+          <ion-input formControlName="motivo" placeholder="Insira o motivo"></ion-input>
         </ion-item>
 
-        <ion-item>
-          <ion-label>Abonos/Justificativas</ion-label>
-          <ion-checkbox color="primary" checked="false"></ion-checkbox>
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+
+      <ion-card-header>
+        Houve treinamento?
+      </ion-card-header>
+
+      <ion-card-content formGroupName="treinamento">
+
+        <div>
+          <ion-list radio-group formControlName="treinamento">
+            <ion-item>
+              <ion-label>Sim</ion-label>
+              <ion-radio color="primary" value="true" (ionSelect)="validacaoCampo.houveTreinamento = true"></ion-radio>
+            </ion-item>
+
+            <ion-item>
+              <ion-label>Não</ion-label>
+              <ion-radio color="primary" value="false" (ionSelect)="validacaoCampo.houveTreinamento = false"></ion-radio>
+            </ion-item>
+          </ion-list>
+        </div>
+
+
+
+        <div *ngIf="validacaoCampo.houveTreinamento === true">
+
+          <ion-item text-wrap>
+            Selecione os tópicos abordados no treinamento
+          </ion-item>
+          <ion-item>
+            <ion-label>Cadastros</ion-label>
+            <ion-checkbox color="primary" formControlName="cadastros"></ion-checkbox>
+          </ion-item>
+
+          <ion-item>
+            <ion-label>Abonos/Justificativas</ion-label>
+            <ion-checkbox color="primary" formControlName="abonos_justificativas"></ion-checkbox>
+          </ion-item>
+
+          <ion-item>
+            <ion-label>Parâmetros Gerais</ion-label>
+            <ion-checkbox color="primary" formControlName="parametros_gerais"></ion-checkbox>
+          </ion-item>
+
+          <ion-item>
+            <ion-label>Relatórios</ion-label>
+            <ion-checkbox color="primary" formControlName="relatorios"></ion-checkbox>
+          </ion-item>
+
+          <ion-item>
+            <ion-label>Importação</ion-label>
+            <ion-checkbox color="primary" formControlName="importacao_dados"></ion-checkbox>
+          </ion-item>
+
+          <ion-item>
+            <ion-label>Interrupçoẽs</ion-label>
+            <ion-checkbox color="primary" formControlName="interrupcoes"></ion-checkbox>
+          </ion-item>
+
+          <ion-item>
+            <ion-label>Backup do Sistema</ion-label>
+            <ion-checkbox color="primary" formControlName="backup_sistema"></ion-checkbox>
+          </ion-item>
+
+          <ion-item>
+            <ion-label stacked color="primary">Software</ion-label>
+            <ion-input placeholder="Insira o software" formControlName="software"></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-label stacked color="primary">Caminho</ion-label>
+            <ion-input placeholder="Insira o caminho da rede" formControlName="caminho"></ion-input>
+          </ion-item>
+        </div>
+
+      </ion-card-content>
+
+    </ion-card>
+
+
+    <ion-card>
+      <ion-card-header>
+        Houve remoção do relógio?
+      </ion-card-header>
+
+      <ion-card-content formGroupName="retirou_equipamento">
+
+        <ion-list radio-group formControlName="retirado">
+
+          <ion-item>
+            <ion-label>Sim</ion-label>
+            <ion-radio color="primary" value="true" (ionSelect)="validacaoCampo.houveRemocao = true"></ion-radio>
+          </ion-item>
+
+          <ion-item>
+            <ion-label>Não</ion-label>
+            <ion-radio color="primary" value="false" checked (ionSelect)="validacaoCampo.houveRemocao = false"></ion-radio>
+          </ion-item>
+
+        </ion-list>
+
+
+      </ion-card-content>
+
+    </ion-card>
+
+    <ion-card *ngIf="validacaoCampo.houveRemocao">
+
+      <ion-card-header>
+        Foi o mesmo relógio?
+      </ion-card-header>
+
+      <ion-card-content>
+
+        <ion-list radio-group>
+
+          <ion-item>
+            <ion-label>Sim</ion-label>
+            <ion-radio color="primary" value="true" (ionSelect)="validacaoCampo.mesmoRelogio = true"></ion-radio>
+          </ion-item>
+
+          <ion-item>
+            <ion-label>Não</ion-label>
+            <ion-radio color="primary" value="false" (ionSelect)="validacaoCampo.mesmoRelogio = false"></ion-radio>
+          </ion-item>
+
+        </ion-list>
+
+
+        <div *ngIf="!validacaoCampo.mesmoRelogio">
+
+
+          <ion-item text-wrap>
+            <ion-textarea formControlName="mesmo_equipamento" class="pecas-removidas" rows="7" cols="10" placeholder="Insira o(s) relógio(s) que foram removidos, seu(s) respectivos número de série e o que foi cada removido de cada um deles"></ion-textarea>
+          </ion-item>
+
+        </div>
+
+        <div *ngIf="validacaoCampo.mesmoRelogio">
+
+          <ion-item text-wrap>
+            <ion-textarea  formControlName="outro_equipamento"  rows="3" cols="10" placeholder="Insira a(s) peça(s) que foram removidas do relógio"></ion-textarea>
+          </ion-item>
+
+        </div>
+
+
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card>
+      <ion-card-header>
+        Faturamento
+      </ion-card-header>
+
+      <ion-card-content>
+        <ion-item class="mesmo-cnpj">
+          Mesmo CNPJ?
         </ion-item>
 
-        <ion-item>
-          <ion-label>Parâmetros Gerais</ion-label>
-          <ion-checkbox color="primary" checked="false"></ion-checkbox>
-        </ion-item>
+        <ion-list radio-group>
 
-        <ion-item>
-          <ion-label>Relatórios</ion-label>
-          <ion-checkbox color="primary" checked="false"></ion-checkbox>
-        </ion-item>
+          <ion-item>
+            <ion-label>Sim</ion-label>
+            <ion-radio color="primary" value="true" (ionSelect)="validacaoCampo.mesmoCnpj = true"></ion-radio>
+          </ion-item>
 
-        <ion-item>
-          <ion-label>Importação</ion-label>
-          <ion-checkbox color="primary" checked="false"></ion-checkbox>
-        </ion-item>
-
-        <ion-item>
-          <ion-label>Backup do Sistema</ion-label>
-          <ion-checkbox color="primary" checked="false"></ion-checkbox>
-        </ion-item>
-
-        <ion-item>
-          <ion-label stacked color="primary">Software</ion-label>
-          <ion-input placeholder="Insira o software"></ion-input>
-        </ion-item>
-
-        <ion-item>
-          <ion-label stacked color="primary">Caminho</ion-label>
-          <ion-input placeholder="Insira o caminho da rede"></ion-input>
-        </ion-item>
-      </div>
-
-    </ion-card-content>
-
-  </ion-card>
+          <ion-item>
+            <ion-label>Não</ion-label>
+            <ion-radio color="primary" value="false" (ionSelect)="validacaoCampo.mesmoCnpj = false"></ion-radio>
+          </ion-item>
 
 
-  <ion-card>
-    <ion-card-header>
-      Houve remoção do relógio?
-    </ion-card-header>
+        </ion-list>
 
-    <ion-card-content>
+        <div *ngIf="!validacaoCampo.mesmoCnpj">
 
-      <ion-list radio-group>
+          <ion-item>
+            <ion-label stacked color="primary">CNPJ</ion-label>
+            <ion-input placeholder="CNPJ"></ion-input>
+          </ion-item>
 
-        <ion-item>
-          <ion-label>Sim</ion-label>
-          <ion-radio color="primary" value="sim" (ionSelect)="houveRemocao = true"></ion-radio>
-        </ion-item>
+          <ion-item>
+            <ion-label stacked color="primary">Razão social</ion-label>
+            <ion-input placeholder="Razão social"></ion-input>
+          </ion-item>
 
-        <ion-item>
-          <ion-label>Não</ion-label>
-          <ion-radio color="primary" value="nao" checked (ionSelect)="houveRemocao = false"></ion-radio>
-        </ion-item>
+          <ion-item>
+            <ion-label stacked color="primary">E-mail</ion-label>
+            <ion-input placeholder="E-mail"></ion-input>
+          </ion-item>
 
-      </ion-list>
+          <ion-item>
+            <ion-label stacked color="primary">Quem aprovou</ion-label>
+            <ion-input placeholder="Quem aprovou"></ion-input>
+          </ion-item>
 
+          <ion-item>
+            <ion-label stacked color="primary">Valor</ion-label>
+            <ion-input placeholder="Valor"></ion-input>
+          </ion-item>
 
-    </ion-card-content>
-
-  </ion-card>
-
-  <ion-card *ngIf="houveRemocao">
-
-    <ion-card-header>
-      Foi o mesmo relógio?
-    </ion-card-header>
-
-    <ion-card-content>
-
-      <ion-list radio-group>
-
-        <ion-item>
-          <ion-label>Sim</ion-label>
-          <ion-radio color="primary" value="sim" checked (ionSelect)="mesmoRelogio = true"></ion-radio>
-        </ion-item>
-
-        <ion-item>
-          <ion-label>Não</ion-label>
-          <ion-radio color="primary" value="nao" (ionSelect)="mesmoRelogio = false"></ion-radio>
-        </ion-item>
-
-      </ion-list>
-
-
-      <div *ngIf="!mesmoRelogio">
-
-
-        <ion-item text-wrap>
-          <ion-textarea class="pecas-removidas" rows="7" cols="10" placeholder="Insira o(s) relógio(s) que foram removidos, seu(s) respectivos número de série e o que foi cada removido de cada um deles"></ion-textarea>
-        </ion-item>
-
-      </div>
-
-      <div *ngIf="mesmoRelogio">
-
-        <ion-item text-wrap>
-          <ion-textarea rows="3" cols="10" placeholder="Insira a(s) peça(s) que foram removidas do relógio"></ion-textarea>
-        </ion-item>
-
-      </div>
-
-
-    </ion-card-content>
-  </ion-card>
-
-  <ion-card>
-    <ion-card-header>
-      Faturamento
-    </ion-card-header>
-
-    <ion-card-content>
-      <ion-item class="mesmo-cnpj">
-        Mesmo CNPJ?
-      </ion-item>
-
-      <ion-list radio-group>
-
-        <ion-item>
-          <ion-label>Sim</ion-label>
-          <ion-radio color="primary" value="sim" checked (ionSelect)="mesmoCnpj = true"></ion-radio>
-        </ion-item>
-
-        <ion-item>
-          <ion-label>Não</ion-label>
-          <ion-radio color="primary" value="nao" (ionSelect)="mesmoCnpj = false"></ion-radio>
-        </ion-item>
-
-      </ion-list>
-
-      <div *ngIf="!mesmoCnpj">
-
-        <ion-item>
-          <ion-label stacked color="primary">CNPJ</ion-label>
-          <ion-input placeholder="CNPJ"></ion-input>
-        </ion-item>
-
-        <ion-item>
-          <ion-label stacked color="primary">Razão social</ion-label>
-          <ion-input placeholder="Razão social"></ion-input>
-        </ion-item>
-
-        <ion-item>
-          <ion-label stacked color="primary">E-mail</ion-label>
-          <ion-input placeholder="E-mail"></ion-input>
-        </ion-item>
-
-        <ion-item>
-          <ion-label stacked color="primary">Quem aprovou</ion-label>
-          <ion-input placeholder="Quem aprovou"></ion-input>
-        </ion-item>
-
-        <ion-item>
-          <ion-label stacked color="primary">Valor</ion-label>
-          <ion-input placeholder="Valor"></ion-input>
-        </ion-item>
-
-        <ion-item>
+          <ion-item>
             <ion-label stacked color="primary">Prazo de pagamento</ion-label>
             <ion-input placeholder="Prazo de pagamento"></ion-input>
-        </ion-item>
+          </ion-item>
 
 
-      </div>
-    </ion-card-content>
+        </div>
+      </ion-card-content>
 
 
-  </ion-card>
+    </ion-card> -->
+
+    <ion-card>
+      <ion-card-content>
+        <button ion-button block type="submit" [disabled]="!interacaoTecnicoForm.valid">Salvar</button>
+      </ion-card-content>
+    </ion-card>
 
 
-  <ion-card>
-    <ion-card-content>
-      <button ion-button block>Salvar</button>
-    </ion-card-content>
-  </ion-card>
-
-
+  </form>
 </ion-content>
