refactor: changing the style of the app and adding tabs.

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,5 @@
 <ion-menu [content]="content">
+
   <ion-header padding>
     <div class="side-menu">
       <div class="first-section">
@@ -8,8 +9,8 @@
         <ion-title>{{funcionario?.nome}}</ion-title>
       </div>
     </div>
-
   </ion-header>
+
   <ion-content class="custom">
     <ion-list no-lines>
       <button ion-item>
@@ -22,7 +23,14 @@
       </button>
     </ion-list>
   </ion-content>
+
 </ion-menu>
-<ion-tabs #content color="white">
-  <ion-tab [root]="tab1Root" tabIcon="car" ></ion-tab>
+
+<ion-tabs #content color="blue">
+  <ion-tab [root]="tab1Root" tabtitle="Chamados" tabIcon="md-construct"></ion-tab>
+  <ion-tab [root]="tab2Root" tabtitle="Almoço" tabIcon="md-restaurant"></ion-tab>
+  <ion-tab [root]="tab3Root" tabtitle="Home" tabIcon="md-home"></ion-tab>
+  <ion-tab [root]="tab4Root" tabtitle="Abastecimento" tabIcon="ios-funnel"></ion-tab>
+  <ion-tab [root]="tab5Root" tabtitle="Outros" tabIcon="md-apps"></ion-tab>
 </ion-tabs>
+
