--- a/src/pages/chamados/chamados.html
+++ b/src/pages/chamados/chamados.html
@@ -6,12 +6,12 @@ Ionic pages and navigation.
 -->
 <ion-header>
 
-  <ion-navbar color='primary'>
+  <ion-navbar>
     <button ion-button menuToggle><ion-icon name="menu"></ion-icon></button>
     <ion-title>Chamados</ion-title>
   </ion-navbar>
 
-  <ion-toolbar no-border-top color='primary'>
+  <ion-toolbar no-border-bottom >
     <ion-segment [(ngModel)]="selectedSegment" (ionChange)="changeSegment()">
       <ion-segment-button class='chamado-segment' value="hoje">
         Hoje
