add validation to the screens app

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,5 +10,17 @@
 </ion-header>
 
 <ion-content>
-  <form-monitoramento [tipo]='tipo'></form-monitoramento>
+  <pre *ngIf="(monitoramento$ | async) as monitoramento">
+    {{ monitoramento$ | async | json }}
+  </pre>
+  <div *ngIf="(monitoramento$ | async) as monitoramento">
+    <form-monitoramento
+      [tipo]='tipo'
+      [monitoramento]="monitoramento$ | async"
+      *ngIf="monitoramento?.tipo_quilometragem === tipo">
+    </form-monitoramento>
+    <div *ngIf="monitoramento?.tipo_quilometragem !== tipo">
+        <h1>Já exite um destino do {{ monitoramento?.tipo_quilometragem }} que não foi finalizado!</h1>
+    </div>
+  </div>
 </ion-content>
