chore: introducing redux in the templete.

--- a/src/pages/almoco/almoco.html
+++ b/src/pages/almoco/almoco.html
@@ -11,9 +11,10 @@
 
 
 <ion-content>
-  <pre *ngIf="(monitoramento$ | async) as monitoramento">
+
+  <!-- <pre *ngIf="(monitoramento$ | async) as monitoramento">
     {{ monitoramento$ | async | json }}
-  </pre>
+  </pre> -->
   <div *ngIf="(monitoramento$ | async) as monitoramento">
     <form-monitoramento
       [tipo]='tipo'
