--- a/src/pages/outros/outros.html
+++ b/src/pages/outros/outros.html
@@ -11,17 +11,14 @@
 
 
 <ion-content>
-  <pre *ngIf="(monitoramento$ | async) as monitoramento">
-    {{ monitoramento$ | async | json }}
-  </pre>
   <form-monitoramento
     [tipo]='tipo'
     [monitoramento]="monitoramento$ | async"
   >
   </form-monitoramento>
   <div *ngIf="(monitoramento$ | async) as monitoramento">
-    <div *ngIf="monitoramento?.tipo_quilometragem !== tipo">
-        <h1>Já exite um destino do {{ monitoramento?.tipo_quilometragem }} que não foi finalizado!</h1>
+    <div *ngIf="monitoramento?.tipo !== tipo">
+        <h1>Já exite um destino do {{ monitoramento?.tipo }} que não foi finalizado!</h1>
     </div>
   </div>
 
