--- a/src/pages/almoco/almoco.html
+++ b/src/pages/almoco/almoco.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-  <ion-navbar >
+  <ion-navbar color="primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -9,17 +9,7 @@
 
 </ion-header>
 
-
 <ion-content>
-  <form-monitoramento
-    [tipo]='tipo'
-    [monitoramento]="monitoramento$ | async"
-  >
+  <form-monitoramento [tipo]='tipo' [monitoramento]="monitoramento$ | async">
   </form-monitoramento>
-  <div *ngIf="(monitoramento$ | async) as monitoramento">
-    <div *ngIf="monitoramento?.tipo !== tipo">
-        <h1>Já exite um destino do {{ monitoramento?.tipo }} que não foi finalizado!</h1>
-    </div>
-  </div>
-
 </ion-content>
