--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,28 +1,18 @@
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Empresa</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content>
-  <pre *ngIf="(monitoramento$ | async) as monitoramento">
-    {{ monitoramento$ | async | json }}
-  </pre>
-  <form-monitoramento
-    [tipo]='tipo'
-    [monitoramento]="monitoramento$ | async"
-  >
+
+  <form-monitoramento [tipo]='tipo' [monitoramento]="monitoramento$ | async">
   </form-monitoramento>
-  <div *ngIf="(monitoramento$ | async) as monitoramento">
-    <div *ngIf="monitoramento?.tipo !== tipo">
-        <h1>Já exite um destino do {{ monitoramento?.tipo }} que não foi finalizado!</h1>
-    </div>
-  </div>
 
 </ion-content>
