style: added background-color footer.

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -26,11 +26,10 @@
 
 </ion-menu>
 
-<ion-tabs #content color="blue">
+<ion-tabs color="primary" class="tabs" #content>
   <ion-tab [root]="tab1Root" tabtitle="Chamados" tabIcon="md-construct"></ion-tab>
   <ion-tab [root]="tab2Root" tabtitle="Almoço" tabIcon="md-restaurant"></ion-tab>
   <ion-tab [root]="tab3Root" tabtitle="Home" tabIcon="md-home"></ion-tab>
   <ion-tab [root]="tab4Root" tabtitle="Abastecimento" tabIcon="ios-funnel"></ion-tab>
   <ion-tab [root]="tab5Root" tabtitle="Outros" tabIcon="md-apps"></ion-tab>
 </ion-tabs>
-
