--- a/src/pages/abastecimento/abastecimento.html
+++ b/src/pages/abastecimento/abastecimento.html
@@ -1,11 +1,4 @@
-<ion-header>
-  <ion-navbar color="primary">
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Abastecimento</ion-title>
-  </ion-navbar>
-</ion-header>
+<header></header>
 
 <ion-content>
   <form-monitoramento [tipo]='tipo' [monitoramento]="monitoramento$ | async">
