--- a/src/pages/almoco/almoco.html
+++ b/src/pages/almoco/almoco.html
@@ -1,13 +1,4 @@
-<ion-header>
-
-  <ion-navbar color="primary">
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Almoço</ion-title>
-  </ion-navbar>
-
-</ion-header>
+<header></header>
 
 <ion-content>
   <form-monitoramento [tipo]='tipo' [monitoramento]="monitoramento$ | async">
