--- a/src/pages/chamados/chamados.html
+++ b/src/pages/chamados/chamados.html
@@ -1,17 +1,6 @@
-<!--
-Generated template for the ChamadosPage page.
-
-See http://ionicframework.com/docs/components/#navigation for more info on
-Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar color="primary">
-    <button ion-button menuToggle><ion-icon name="menu"></ion-icon></button>
-    <ion-title>Chamados</ion-title>
-  </ion-navbar>
-
-  <ion-toolbar color="primary"no-border-bottom >
+  <header></header>
+  <ion-toolbar color="primary" no-border-bottom>
     <ion-segment [(ngModel)]="selectedSegment" (ionChange)="changeSegment()">
       <ion-segment-button class='chamado-segment' value="hoje">
         Hoje
@@ -37,7 +26,7 @@ Ionic pages and navigation.
           <h2>
             <strong>
               {{ atendimento.cliente.nome_razao_social | uppercase}}
-           </strong>
+            </strong>
           </h2>
         </ion-col>
       </ion-row>
@@ -49,12 +38,10 @@ Ionic pages and navigation.
     <ion-card-content>
       <ion-list>
         <ion-row>
-           <ion-col col-12>
+          <ion-col col-12>
             <p>
               <ion-icon name="pin" color="primary"></ion-icon>
-              {{ atendimento.endereco.cidade +' - '
-              + atendimento.endereco.uf +', '
-              + atendimento.endereco.cep }}
+              {{ atendimento.endereco.cidade +' - ' + atendimento.endereco.uf +', ' + atendimento.endereco.cep }}
             </p>
           </ion-col>
 
