--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,4 @@
-<ion-header>
-
-  <ion-navbar color="primary">
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Empresa</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
+<header></header>
 
 <ion-content>
 
