--- a/src/pages/outros/outros.html
+++ b/src/pages/outros/outros.html
@@ -1,14 +1,4 @@
-<ion-header>
-
-  <ion-navbar color="primary">
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-
-    <ion-title>Outros</ion-title>
-  </ion-navbar>
-
-</ion-header>
+<header></header>
 
 <ion-content>
   <form-monitoramento [tipo]='tipo' [monitoramento]="monitoramento$ | async">
