modify title of tab

--- a/src/pages/chamados/chamados.html
+++ b/src/pages/chamados/chamados.html
@@ -6,7 +6,7 @@
         Hoje
       </ion-segment-button>
       <ion-segment-button class='chamado-segment' value="proximos">
-        Próximos
+        Amanhã
       </ion-segment-button>
       <ion-segment-button class='chamado-segment' value="concluidos">
         Concluidos
