--- a/src/pages/modal-interacao/modal-interacao.html
+++ b/src/pages/modal-interacao/modal-interacao.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content padding>
-  <form [formGroup]="interacaoTecnicoForm" (ngSubmit)="salvarDados(interacaoTecnicoForm.value)">
+  <form [formGroup]="interacaoTecnicoForm">
 
     <ion-card>
       <ion-card-header>
@@ -257,8 +257,20 @@
     </ion-card>
 
     <ion-card>
-      <ion-card-content>
-        <button ion-button block type="submit" [disabled]="!interacaoTecnicoForm.valid">Salvar</button>
+     <ion-card-content>
+        <ion-grid>
+          <ion-row>
+            <ion-col col-6>
+              <button ion-button block
+              (click)="fecharModal()">Cancelar</button>
+            </ion-col>
+            <ion-col col-6>
+              <button ion-button block
+              (click)="salvarDados(interacaoTecnicoForm.value)"
+              [disabled]="!interacaoTecnicoForm.valid">Salvar</button>
+            </ion-col>
+          </ion-row>
+          </ion-grid>
       </ion-card-content>
     </ion-card>
 
